@@ -47,6 +47,9 @@ IN DEVELOPMENT
       the null revision, and consider using ``None`` for this purpose
       deprecated.  (Aaron Bentley)
 
+    * New transport decorator 'unlistable+' which disables the list_dir
+      functionality for testing.
+
   TESTING:
 
     * Remove selftest ``--clean-output``, ``--numbered-dirs`` and
